--- a/src/components/App.css
+++ b/src/components/App.css
@@ -47,3 +47,19 @@
     transform: rotate(360deg);
   }
 }
+
+.OverlayContentStyles {
+  width: "60%";
+  border-radius: 10;
+  background-color: "white";
+  padding-top: 15;
+  padding-bottom: 45;
+  padding-left: 15;
+  padding-right: 15;
+}
+
+.CloseButton {
+  display: "flex";
+  flex-direction: "row-reverse";
+  margin-bottom: 10;
+}
