Update pint graphics to be hidden while unformatted, fix bug in forms that lack type field, and add quantity of pints remaining to keg with button feature to reduce number of pints as user clicks.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -63,3 +63,49 @@
   flex-direction: "row-reverse";
   margin-bottom: 10;
 }
+
+.pint {
+  display: block;
+  margin-bottom: -150px;
+  width: 126px;
+  height: 160px;
+  background-color: gray;
+  /* opacity: 0.8; */
+  border-radius: 60% 60% 40% 40%/ 8% 8% 80% 80%;
+  /* border: 10px solid lightgray; */
+  border-top: none;
+  border-bottom: none;
+}
+.pint-after {
+  display: block;
+  margin-left: 13px;
+  width: 100px;
+  height: 200px;
+  background-color: gray;
+  /* opacity: 0.6; */
+  border-radius: 50% 50% 60% 60% / 70% 70% 12% 12%;
+  /* border: 10px solid lightgray; */
+}
+
+.pintSmall {
+  display: block;
+  margin-bottom: -15px;
+  width: 12px;
+  height: 16px;
+  background-color: gray;
+  /* opacity: 0.8; */
+  border-radius: 60% 60% 40% 40%/ 8% 8% 80% 80%;
+  /* border: 10px solid lightgray; */
+  border-top: none;
+  border-bottom: none;
+}
+.pintSmall-after {
+  display: block;
+  margin-left: 1px;
+  width: 10px;
+  height: 20px;
+  background-color: gray;
+  /* opacity: 0.6; */
+  border-radius: 50% 50% 60% 60% / 70% 70% 12% 12%;
+  /* border: 10px solid lightgray; */
+}
